--- a/nebinance/src/modules/components/crypto-item/crypto-item.sass
+++ b/nebinance/src/modules/components/crypto-item/crypto-item.sass
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway:200')
+
 .item
-    z-index: 6
+    z-index: 1
     &_picture
         width: 50px
         height: 50px
@@ -42,12 +44,12 @@
   width: 110px
   height: 100px
   font-family: 'Raleway'
-  margin: 10px
+  margin: 20px
   padding: 5px
   border-radius: 100%
   position: relative
   &:hover
-    .star
+    .eye
       display: block
   &_button
     display: block
@@ -69,16 +71,16 @@
       background: rgba(0, 0, 0, 0)
     &.main
       background: rgba(0, 0, 0, 0)
-  .star
-    width: 20px
-    height: 20px
+  .eye
+    width: 30px
+    height: 30px
     position: absolute
     background: none
     border: none
-    left: -16px
-    top: -5px
+    left: -33px
+    top: -15px
     display: none
-    &.favorite
+    &.isView
       display: block
 .picture
   width: inherit
@@ -86,7 +88,3 @@
   fill: white
   position: absolute
   cursor: pointer
-  &.favorite
-    fill: #ffff00
-  &:hover
-    fill: #ffff00
