creation of functionality for edit items

--- a/nebinance/src/modules/components/crypto-item/crypto-item.sass
+++ b/nebinance/src/modules/components/crypto-item/crypto-item.sass
@@ -51,6 +51,9 @@
   &:hover
     .eye
       display: block
+  &_picture-edit
+    width: 20px
+    height: 20px
   &_button
     display: block
     width: inherit
@@ -88,3 +91,17 @@
   fill: white
   position: absolute
   cursor: pointer
+  
+
+.item_button-edit
+  display: block
+  width: 110px
+  height: 30px
+  margin-top: 10px
+  background: none
+  border: none
+  cursor: pointer
+  color: white
+  &:hover
+    color: #efa501
+
