--- a/nebinance/src/CryptoApp.sass
+++ b/nebinance/src/CryptoApp.sass
@@ -6,11 +6,10 @@
     min-height: 200px
     .fast-view
         &_wrapper
-            height: 150px
+            min-height: 150px
             display: flex
             justify-content: space-between
             flex-direction: column
-            text-align: center
             .modal_button
                 width: 100%
         &_item
@@ -19,4 +18,8 @@
             font-weight: 700
             font-size: 20px
             margin: 10px 0 10px 0
-
+            max-width: 400px
+            word-break: break-all
+            text-align: center
+        &_label
+            text-align: center
