--- a/nebinance/src/modules/Modal/Modal.sass
+++ b/nebinance/src/modules/Modal/Modal.sass
@@ -51,7 +51,7 @@
         display: flex
         flex-direction: column
         align-content: center
-    &_input,&_textarea
+    &_input,&_textarea,&_input-edit,&_textarea-edit
         width: 300px
         height: 30px
         border: none
@@ -61,13 +61,8 @@
         padding: 10px 155px 10px 10px
         display: block
         word-break: break-all
-        appearance: none
-        -moz-appearance: textfield
-        &:hover
-            appearance: none
-            -moz-appearance: textfield
             
-    &_textarea
+    &_textarea,&_textarea-edit
         width: 450px
         height: 90px
         padding: 10px
@@ -80,17 +75,25 @@
         border-radius: 5px
         border-radius: 10px
         cursor: pointer
-        &.submit
+        &.submit,&.delete
             margin-left: 15px
+            border-radius: 20px
+            width: 100px
+            background-color: #26a69a
+            border: none
+            font-weight: 700
+        &.delete
+            background-color: red
+            margin-left: 0px
+            // box-shadow: 3px -3px #6d8076 inset
     &_label
         position: relative
+        color: white
+        font-weight: 700
 .button-wrapper
     display: flex
     justify-content: right
     margin-top: 10px
-    .submit
-        border-radius: 20px
-        width: 100px
     .exit_button
         margin-right: 10px
         border-radius: 20px
