--- a/nebinance/src/modules/components/list-item/list-item.sass
+++ b/nebinance/src/modules/components/list-item/list-item.sass
@@ -5,9 +5,11 @@
     flex-direction: row
     scrollbar-width: thin
     width: 1170px
-    margin: 50px auto
+    margin: 30px auto
     overflow: hidden
     z-index: -1
+    padding: 45px
+
 
 .item_back
     position: absolute
