--- a/src/modules/components/list-items/list-items.module.sass
+++ b/src/modules/components/list-items/list-items.module.sass
@@ -1,10 +1,10 @@
 .list
     display: flex
-    justify-content: space-between
+    justify-content: left
     flex-wrap: wrap
     flex-direction: row
     scrollbar-width: thin
-    margin: 50px 50px
+    margin: 50px 80px 50px 100px
     overflow: hidden
     z-index: -1
 
