--- a/src/modules/components/modal-windows/view-modal.module.sass
+++ b/src/modules/components/modal-windows/view-modal.module.sass
@@ -6,15 +6,37 @@
     text-align: center
 
 .button
-    width: 100%
-    padding: 5px
-    background: #3772FF
-    color: white
-    border: none
-    font-size: 16px
-    font-weight: 700
-    border-radius: 10px
+    width: 25px
+    height: 25px
     cursor: pointer
+    background: rgba(0, 0, 0, 0)
+    position: absolute
+    top: 10px
+    right: 25px
+    background-image: none
+    -webkit-appearance: none
+    -moz-appearance: none
+    border: none
+    &::before 
+        content: ""
+        border-right: 16px solid white
+        height: 2px
+        position: absolute
+        transform: rotate(135deg)
+        left: 4px
+    &::after 
+        content: ""
+        border-right: 16px solid white
+        height: 2px
+        position: absolute
+        transform: rotate(45deg)
+        left: 4px
+    &:hover::after 
+        transition: 0.5s
+        border-right: 16px solid red
+    &:hover::before 
+        transition: 0.5s
+        border-right: 16px solid red
 
 .item
     color: white
