creation func for edit and delete items

--- a/src/modules/components/crypto-item/crypto-item.module.sass
+++ b/src/modules/components/crypto-item/crypto-item.module.sass
@@ -87,6 +87,24 @@
   height: 50px
   margin-bottom: 10px
 
+.button_edit
+  text-align: center
+  font-size: 14px
+  background-color: rgba(0, 0, 0,0 )
+  border: none
+  color: white
+  cursor: pointer
+  width: inherit
+  height: fit-content
+  margin-top: 10px
+  display: flex
+  &:hover
+    color: yellow
+    text-decoration: underline
+.picture_edit
+  width: 25px
+  height: 13px
+
 @media (min-width: 0px) and (max-width: 780px) 
   .item
     width: 85px
@@ -99,3 +117,8 @@
     width: 40px
     height: 40px
     margin-bottom: 5px
+  .button_edit
+    font-size: 10px
+  .picture_edit
+    width: 21px
+    height: 11px
