fix variables and no-result search

--- a/src/modules/components/header-menu/header-menu.module.sass
+++ b/src/modules/components/header-menu/header-menu.module.sass
@@ -140,11 +140,7 @@ header
         display: flex
         justify-content: center
         min-width: 460px
-
-    .panel
-        display: none
-
-    .icon
+    .link
         display: none
         
     .logo_wrapper
