--- a/src/modules/components/list-items/list-items.module.sass
+++ b/src/modules/components/list-items/list-items.module.sass
@@ -24,6 +24,11 @@
         left: 980px
         transform: rotate(130deg)
 
+.text
+    font-weight: 500
+    font-family: "Sofia", sans-serif;
+    color: white
+
 @media (min-width: 0px) and (max-width: 1260px) 
     .item,.item_right
         top: 20px
@@ -57,6 +62,7 @@
     .list
         max-width: 405px
         min-width: 405px
+        justify-content: center
     .item,.item_right
         top: 135px
         left: -450px
