--- a/src/modules/components/header-menu/header-menu.module.sass
+++ b/src/modules/components/header-menu/header-menu.module.sass
@@ -67,6 +67,8 @@ header
     border: none
     width: fit-content
     cursor: pointer
+    text-decoration: none
+    margin-top: 10px
     &:hover
         text-decoration: underline
         color: #ffff00
